# actix-cpf-generator-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust-workflow.yml
axum/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
axum/src/: main.rs  paths.rs  structs.rs  types.rs  utils.rs
src/: htmls.rs  lib.rs  main.rs  paths.rs  structs.rs  types.rs  utils.rs
