[package]
name = "cpf-generator-api"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[dependencies]
axum = "0.5.17"
dotenv = "0.15.0"
hyper = { version = "0.14.22", features = ["full"] }
rand = "0.8.5"
sentry = "0.28.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
unicode-segmentation = "1.10.0"
